--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
     font-family: Arial;
     border: border-box;
 }
+
+header{
+    position: fixed;
+    width: 100%;
+    top: 0px;
+
+}
 /*container*/
 .navbar{
     height: 60px;
@@ -12,6 +19,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    width: 100%;
 }
 /* first box*/
 .amazon-logo{
@@ -169,6 +177,7 @@ i{
 
     align-items: center;
     height: 40px;
+    width: 100%;
 }
 
 .panel-menu{
@@ -191,14 +200,12 @@ i{
 }
 
 .hero-section{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    
+    margin-top: 100px;
 
 }
 
 .hero-image{
+    
     background-image: url("amazon front.jpg");
     height: 500px;
     width: 100%;
@@ -209,11 +216,119 @@ i{
     background-color: #E6E6E6;
     color: black;
     height: 40px;
-    width: 80%;
+    width: 100%;
     
-    position: absolute;
-    margin-bottom: 10px;
+    
+    
+    
+    
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+/*content */
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #E6E6E6;
+    
+}
+.box{
+    height: 400px;
+    width: 23%;
+
+    
+    
+    margin-top: 10px;
+    background-color: white;
+    padding: 20px 0px 15px;
+
+    }
+
+
+
+.box-content{
+    margin-left: 1rem;
+    margin-right: 1rem;
+    
+}
+
+.box-content p{
+    color: #007185;
+}
+
+
+.content-img{
+    height: 300px;
+    width:100%;
+    background-size: cover;
+    margin-top: 10px;
+    background-repeat: no-repeat;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    }
+
+    
+ .foot-panel1{
+    background-color: #37475a;
+    height: 50px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+ }
+
+ .foot-panel2{
+    display: flex;
+    color: white;
+    justify-content: space-evenly;
+    background-color: #222f3d;
+    height: 300px;
+ }
+
+ ul a {
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+ }
+
+ ul p{
+    font-size: 1rem;
+    font-weight: 600;
+    margin-top: 10px;
+ }
+ .foot-panel3{
+    height: 70px;
+    background-color: #222f3d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 0.5px solid white;
+ }
+
+ .logo{
+    background-image: url("amazon_logo.jpg");
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+ }
+
+ .foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 70px;
+    padding-top: 20px;
+    text-align: center;
+    
+    
+ }
+
+ .pages a{
+    margin-left: 10px;
+    
+ }
+
+
